--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libertinus+Math&family=Libertinus+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -13,8 +14,16 @@
     <div class = "screen">
         <div class = "head">
             <p>Library:Track Books</p>
-            <button id = "headButton">Add Book</button>
+            <button id = "headButton" onclick="addButtonClicked()">Add Book</button>
         </div>
+    </div>
+
+    <div class = "grid">
+
+    </div>
+
+    <div class = "prompt" id = "prompt">
+        <p>Add Your Book!</p>
     </div>
 </body>
 </html>
