--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
 
     <div class = "prompt" id = "prompt">
         <p>Add Your Book!</p>
+        <form>
+            Title:
+            <input type = "text" class = "inputBox">
+        </form>
+        <form>
+            Author:
+            <input type = "text" class = "inputBox">
+        </form>
+        <form>
+            Pages:
+            <input type = "text" class = "inputBox">
+        </form>
+
     </div>
 </body>
 </html>
