--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
         <p>Add Your Book!</p>
         <form>
             Title:
-            <input type = "text" class = "inputBox">
+            <input type = "text" class = "inputBox" id = "title">
         </form>
         <form>
             Author:
-            <input type = "text" class = "inputBox">
+            <input type = "text" class = "inputBox" id = "author">
         </form>
         <form>
             Pages:
-            <input type = "text" class = "inputBox">
+            <input type = "text" class = "inputBox" id = "pages">
         </form>
-
+        <button id = "promptButton" onclick="submitClicked()">Add!</button>
     </div>
 </body>
 </html>
