added have read check

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             Pages:
             <input type = "text" class = "inputBox" id = "pages">
         </form>
+        <label class="switch">
+            Have you read this book?
+            <input type="checkbox" class = "check" id="check">
+        </label>
         <button id = "promptButton" onclick="submitClicked()">Add!</button>
     </div>
         <script src="script.js"></script>
