--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Libertinus+Math&family=Libertinus+Mono&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <p id="cornerText">Copyright © 2025 Austin Ha</p>
+
     <div class = "screen">
         <div class = "head">
             <p>Library:Track Books</p>
